@startuml
class Clases.AtrAdministrador {
+ boolean guardarDatos(String)
+ boolean login(String, String)
+ int mostrarArray()
+ boolean DesactivarUsuario(String, ArrayList<AtrUsuario>)
+ int buscarUsuario(String, ArrayList<AtrUsuario>)
+ boolean ActivarUsuario(String, ArrayList<AtrUsuario>)
+ boolean EliminarUsuario(String, ArrayList<AtrUsuario>)
+ void guardarArray(AtrSuperUsuario)
}



class Clases.AtrMensaje {
- {static} long serialVersionUID
- String autor
- String contenido
- List<AtrMensaje> respuestas
- LocalDateTime fechaHora
- {static} DateTimeFormatter formatter
- {static} int ANCHO_MAXIMO
~ String ANSI_RESET
+ String getFechaHora()
+ void setFechaHora(LocalDateTime)
+ String getAutor()
+ String getContenido()
+ void addRespuesta(AtrMensaje)
+ List<AtrMensaje> getRespuestas()
+ String toString()
- String ajustarTexto(String, String)
}

class Clases.AtrUsuario {
- {static} long serialVersionUID
- int idUsuario
- {static} int contador
+ ArrayList<AtrUsuario> usuarios
+ void guardarUsuarios()
+ void cargarUsuarios()
+ boolean guardarDatos(String)
+ boolean login(String, String)
+ void guardarArray(AtrSuperUsuario)
+ int mostrarArray()
+ String toString()
+ {static} void guardarContador()
+ {static} void cargarContador()
+ AtrUsuario iniciarSesion(String, String)
}

interface Clases.metSoloAdministrador {
~ int buscarUsuario(String, ArrayList<AtrUsuario>)
~ boolean DesactivarUsuario(String, ArrayList<AtrUsuario>)
~ boolean ActivarUsuario(String, ArrayList<AtrUsuario>)
~ boolean EliminarUsuario(String, ArrayList<AtrUsuario>)
}

class Clases.AtrForo {
- {static} long serialVersionUID
- List<AtrTema> temas
+ void crearTema(String)
+ void aMensaje(String, String, String)
+ void responderMensaje(String, int, String, String)
+ void mostrarForo()
+ void guardarTemas()
+ void cargarTemas()
}

abstract class Clases.AtrSuperUsuario {
- String nombres
- String usuario
- String contra
- boolean estado
+ {abstract}boolean guardarDatos(String)
+ {abstract}boolean login(String, String)
+ {abstract}void guardarArray(AtrSuperUsuario)
+ {abstract}int mostrarArray()
+ String getNombres()
+ void setNombres(String)
+ String getUsuario()
+ void setUsuario(String)
+ String getContra()
+ void setContra(String)
+ boolean isEstado()
+ void setEstado(boolean)
+ String toString()
}

class Clases.AtrTema {
- {static} long serialVersionUID
- String titulo
- List<AtrMensaje> mensajes
+ String getTitulo()
+ void addMensaje(AtrMensaje)
+ List<AtrMensaje> getMensajes()
+ String toString()
}



Clases.metSoloAdministrador <|.. Clases.AtrAdministrador
java.io.Serializable <|.. Clases.AtrAdministrador
Clases.AtrSuperUsuario <|-- Clases.AtrAdministrador
java.io.Serializable <|.. Clases.AtrMensaje
java.io.Serializable <|.. Clases.AtrUsuario
Clases.AtrSuperUsuario <|-- Clases.AtrUsuario
java.io.Serializable <|.. Clases.AtrForo
java.io.Serializable <|.. Clases.AtrSuperUsuario
java.io.Serializable <|.. Clases.AtrTema

Clases.AtrForo "1" --> "*" Clases.AtrTema : contiene
Clases.AtrTema "1" --> "*" Clases.AtrMensaje : contiene
Clases.AtrMensaje "1" --> "*" Clases.AtrMensaje : responde



@enduml
